made some changes on index.js

--- a/index.html
+++ b/index.html
@@ -206,31 +206,23 @@
     <p>Have questions or ready to start your next printing project? 
         Don't hesitate to contact us! Our <br>friendly team at Rasi Screen 
         Printing is here to assist you every step of the way.</p>
-</div>
  <div class="map-direction">
-
-    <h1>Contact us</h1>
-    <div class="contact info">
-        <img src="https://img.icons8.com/?size=30&id=1iYgXYqIKIYm&format=png">
+    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSVfO1whlLAaxDWmSmGeYZoKGZMNWpFweHxBcZwkCVL4hueilnm" id="map-image">
+    <div class="info-contact">
+   <h3>Contact us</h3>
         <h4>Phone Number</h4>
         <p>+89765434097</p>
-    </div>
-    <div class="address">
-        <img src="https://img.icons8.com/?size=30&id=1iYgXYqIKIYm&format=png">
         <h4>Address</h4>
         <Address> 121 korongo rooad kiambu</Address>
-    </div>
-    <div class="opening">
-        <img src="https://img.icons8.com/?size=30&id=1iYgXYqIKIYm&format=png">
         <h4> Opening hours<h4>
-        <p>We are ope everyday 6:00am to 9.00pm </p>
-    </div>
+        <p>We are ope everyday 6:00am to 9.00pm</p>
 </div>
-
+</div>
+</div>
 <footer>
-<div class="footer-style">
+<div class="style-footer">
 
-   <div class="logo-rasi">
+ <div class="logo-rasi">
 <img id="rasinlogo" src="https://media.licdn.com/dms/image/v2/D5622AQHqBxLvsq38SA/feedshare-shrink_800/feedshare-shrink_800/0/1725627451287?e=2147483647&v=beta&t=eY5e2RNjfsyygEVVeU21YM4KM_iWg15ilu5PxbkR5_Q" width="100">
 </div>
 
@@ -241,26 +233,20 @@
 
 <div class="account">
 <h4>ACCOUNTS</h4>
-<ul>
-<li>Facebook</li>
-<li>Instagram</li>
-<li>Twitter</li>
-<li>Linkedin
-<li>G-mail</li>
-</li>
-</ul>
-
+<p>Facebook</p>
+<p>Instagram</p>
+<p>Twitter</p>
+<p>Linkedin</p>
+<p>G-mail</p>
 </div>
 
 <div class="sitemaps">
 <h4>SITEMAP</h4>
-<ul>
-<li>Home</li>
-<li>About us</li>
-<li>Products</li>
-<li>Gallery</li>
-<li>Contact us</li>
-</ul>
+<p>Home</p>
+<p>About us</p>
+<p>Products</p>
+<p>Gallery</p>
+<p>Contact us</p>
 </div>
 
 <div class="offices">
@@ -270,9 +256,10 @@
 </div>
 
    </div>
-
-<hr>
+   <hr>
 <p id="footer-button"> Copyright 2024, All Rights Reserved by Gavin Design Studio.</p>
+</div>
+</div>
 </div>
 </div>
 </footer>
